fixed cover elem. on safari

--- a/src/components/Conference2021/MainComponent/Conf2021.css
+++ b/src/components/Conference2021/MainComponent/Conf2021.css
@@ -23,9 +23,9 @@
 }
 
 .cover {
-    position: fixed;
+    position: absolute;
     background-color: #000e17;
     width: 100%;
-    height: 100vh;
+    height: 300vh;
     top: max(100vw, 100vh);
 }
